// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders alert without children 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#e7f3e8",
    }
  }
  icon={
    <TextIcon
      code="U"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#46B655",
          },
        ]
      }
    />
  }
  title={
    <Translation
      passThrough="Alert without children"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#065d12",
      },
      undefined,
    ]
  }
/>
`;

exports[`Alert renders danger type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#fae8e8",
    }
  }
  icon={
    <TextIcon
      code=""
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#d21c1c",
          },
        ]
      }
    />
  }
  title={
    <Translation
      passThrough="Alert danger"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#650808",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders success type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#e7f3e8",
    }
  }
  icon={
    <TextIcon
      code="U"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#46B655",
          },
        ]
      }
    />
  }
  title={
    <Translation
      passThrough="Alert success"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#065d12",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders warning type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#fcf1cd",
    }
  }
  icon={
    <TextIcon
      code=""
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#f9971e",
          },
        ]
      }
    />
  }
  title={
    <Translation
      passThrough="Alert warning"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#a93610",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;
